# phylo_grad

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.md  Snakefile  benchmark.py  cat.py  environment.yml  felsenstein.py  input.py  optimize.py  plot.ipynb  pyproject.toml  python_nb.ipynb  random_fasta.py  rust-toolchain.toml  rust_nb.ipynb  test.py  test_python_bindings.ipynb  time_old  tree.tree
.github/workflows/: rust.yml
.ipynb_checkpoints/: rust_nb-checkpoint.ipynb
benchmark_test/: Readme.md  Snakefile  benchmark.py  cat.py  environment.yml  felsenstein.py  input.py  iqtree_benchmark_table.py  optimize.py  optimize_global_model.py  parse_gradient_time.py  partition_file.py  plot.ipynb  plot.py  plot_iqtree_benchmark.ipynb  random_fasta.py  test.py
benchmark_test/data/random/: tree_1024.nwk  tree_16.nwk  tree_16384.nwk  tree_256.nwk  tree_4096.nwk  tree_64.nwk
benchmark_test/data/sim/: alignment_1024_200.fasta  alignment_1024_50.fasta  alignment_16_10.fasta  alignment_256_10.fasta  alignment_256_200.fasta  alignment_256_50.fasta  alignment_4096_200.fasta  alignment_4096_50.fasta  alignment_64_10.fasta  alignment_64_200.fasta  alignment_64_50.fasta
data/: tree.txt  tree_topological.csv
examples/: read_amino_alignment.py  train.py
felsenstein_impl/: Cargo.toml
felsenstein_impl/src/: backward.rs  data_types.rs  forward.rs  lib.rs  main.rs  train.rs  tree.rs
felsenstein_rs/: Cargo.toml
felsenstein_rs/src/: lib.rs
gtr_optimize/: Cargo.toml
gtr_optimize/src/: lib.rs  main.rs
phylo_grad/: Cargo.toml  Readme.md
phylo_grad/src/: backward.rs  data_types.rs  forward.rs  lib.rs  main.rs  preprocessing.rs  run.rs  train.rs  tree.rs  tree_opt.rs
phylo_grad_gpu/: felsenstein_tree.py  pyproject.toml
phylo_grad_gpu/phylo_grad_gpu/: __init__.py  felsenstein_tree.py
phylo_grad_py/: Cargo.toml  pyproject.toml
phylo_grad_py/phylo_grad/: __init__.py
phylo_grad_py/src/: lib.rs
py/: test.py  test_tree.newick
src/: autograd.rs  backward.rs  data_types.rs  forward.rs  io.rs  lib.rs  main.rs  preprocessing.rs  train.rs  tree.rs
