[package]
name = "felsenstein-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "felsenstein_rs"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
itertools = "0.12.1"
logsumexp = "0.1.0" #Compare with the logaddexp crate
nalgebra = "0.32.5"
#nalgebra = { version = "0.32.5", features = ["rand"] }
#ndarray = "0.15.6" #features=["blas"]
num_enum = "0.7.2"
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive"] }
numpy = { version = "0.21.0", features = ["nalgebra"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[profile.release]
lto = true


