[package]
name = "felsenstein-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "felsenstein-rs"
path = "src/main.rs"

[lib]
name = "felsenstein_rs"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
itertools = "0.12.1"
logsumexp = "0.1.0" #Compare with the logaddexp crate
nalgebra = "0.32.5"
#nalgebra = { version = "0.32.5", features = ["rand"] }
nalgebra-lapack = { version = "0.24.0", features=["netlib"] }
lapack = "0.19.0"
netlib-src = "0.8.0"
num_enum = "0.7.2"
num-traits = "0.2.19"
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive"] }
numpy = { version = "0.21.0", features = ["nalgebra"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[profile.release]
lto = true
