[package]
name = "felsenstein-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "felsenstein_rs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.12.1"
logsumexp = "0.1.0" #Compare with the logaddexp crate
nalgebra = {git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
nalgebra-lapack = { git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
lapack = "0.19.0"
num-traits = "0.2.19"
rayon = "1.10.0"
numpy = { version = "0.21.0", features = ["nalgebra"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[profile.release]
lto = true
