[package]
name = "felsenstein_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
logsumexp = "0.1.0" #Compare with the logaddexp crate
nalgebra = {git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
nalgebra-lapack = { git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
lapack = "0.19.0"
num-traits = "0.2.19"
rayon = "1.10.0"
rand = "0.8"
