[package]
name = "phylo_grad"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Lieser <benjamin.lieser@mpinat.mpg.de>", "Jora Belousov <jorabelousov@gmail.com>"]
description = "Gradient calculation of the Felsenstein algorithm with respect to rate matrix"
repository = "https://github.com/soedinglab/felsenstein-generator-grad"
license = "MIT OR Apache-2.0"
keywords = ["math", "felsenstein", "machine-learning", "bioinformatics"]
categories = ["mathematics", "science::bioinformatics"]

[dependencies]
logsumexp = "0.1.0"
nalgebra = {git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
nalgebra-lapack = { git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
lapack-src = { version = "0.10.0", features = ["openblas"] }
num-traits = {version="0.2.19", default-features=false, features = ["libm"]}
rayon = "1.10.0"
rand = "0.8"
itertools = "0.13.0"
libm = "0.2.10"
sleef = "0.3.2"