[package]
name = "phylo_grad"
version = "1.0.0"
edition = "2021"
authors = ["Benjamin Lieser <benjamin.lieser@mpinat.mpg.de>", "Jora Belousov <jorabelousov@gmail.com>"]
description = "Fast gradient calculation of the Felsenstein algorithm with respect to the rate matrix"
repository = "https://github.com/soedinglab/phylo_grad"
license = "MIT OR Apache-2.0"
keywords = ["math", "felsenstein", "machine-learning", "bioinformatics"]
categories = ["mathematics", "science::bioinformatics"]

[dependencies]
logsumexp = "0.1.0"
nalgebra = "0.33.2"
nalgebra-lapack = {version = "0.25.0", default-features=false, features = ["openblas"]}
openblas-src = {version = "0.10", features = ["static"]}
num-traits = {version="0.2.19", default-features=false, features = ["libm"]}
rayon = "1.10.0"
itertools = "0.13.0"
libm = "0.2.10"
sleef = "0.3.2"
phylotree = "0.1.3"
lazy_static = "1.5.0"
gosh-lbfgs = "0.1.0"
seq_io = "0.3.4"
stochastic_optimizers = "0.3.0"