[package]
name = "phylo_grad_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_phylo_grad"
crate-type = ["cdylib"]

[dependencies]
phylo_grad = {path = "../phylo_grad"}
numpy = { version = "0.21.0", features = ["nalgebra"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
nalgebra = {git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
nalgebra-lapack = { git="https://github.com/benjamin-lieser/nalgebra", branch="sym_eigen_bounds"}
lapack = "0.19.0"
num-traits = "0.2.19"
paste = "=0.1.2"
